Font change back to MontSerrat (Source San had some readability issues).  Styling changes for builder.

--- a/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/nested-drag-and-drop-list/nested-drag-and-drop-list.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/nested-drag-and-drop-list/nested-drag-and-drop-list.component.scss
@@ -4,10 +4,10 @@
 	height: 50px;
 }
 .page-questions {
-	border: 1px dashed darkslategray;
 	border-radius: 5px;
-	padding: 0px;
+	padding: 2px;
 	margin: 3px;
+	border: 1px solid $gray-200;
 }
 
 .question-number {
@@ -15,7 +15,6 @@
 	left: 3px;
 	vertical-align: middle !important;
 	text-align: center !important;
-	color: white !important;
 	font-weight: bold !important;
 	font-size: 16px;
 	padding: 10px;
@@ -24,12 +23,8 @@
 }
 
 .page-question {
-	background-color: $gray-800;
-	border-top: 1px solid lightgray;
-	border-bottom: 1px solid lightgray;
 	padding:10px;
 	margin:2px 0px 2px 0px;
-	color:white;
 	min-height: 43px;
 	width:100%;
 
@@ -50,7 +45,7 @@
 		overflow-x: auto;
 	}
 	.icon {
-		margin-left: 40px;
+		margin-left: 50px;
 		margin-right: 10px;
 		float: left;
 		margin-top:-1px;
@@ -71,12 +66,8 @@
 }
 
 .page-part {
-	background-color: $gray-600;
-	border-top: 1px solid lightgray;
-	border-bottom: 1px solid lightgray;
 	padding:10px;
 	margin:2px 0px 0px 0px;
-	color:white;
 	min-height: 43px;
 	width:100%;
 
@@ -95,11 +86,12 @@
 		overflow-x: auto;
 	}
 	.icon {
-		margin-left: 40px;
+		margin-left: 50px;
 		margin-right: 10px;
 		float: left;
 		margin-top:-1px;
 	}
+
 	.question-move-icon {
 		flex:unset;
 		margin-right: 10px;
@@ -116,7 +108,7 @@
 }
 
 .question-options {
-	background-color: white;
+	
 }
 
 .question-part-container {
@@ -124,8 +116,13 @@
 	margin-right:5px;
 	margin-bottom:10px;
 	overflow:hidden;
-	background-color: white;
-	border: 1px dotted $gray-200;
+	
+	
+	.page-question {
+		.icon {
+			margin-left: 60px !important;
+		}
+	}
 }
 
 .drag-over {
