--- a/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/question-details/question-details.component.scss
+++ b/src/TRAISI/ClientApp/src/admin-app/app/survey-builder/components/question-details/question-details.component.scss
@@ -20,7 +20,6 @@
 
 .details-wrapper {
 	padding-bottom:10px;
-	background-color: white !important;
 }
 
 .disable-clicks { 
