--- a/src/TRAISI/ClientApp/src/shared/assets/scss/_variables.scss
+++ b/src/TRAISI/ClientApp/src/shared/assets/scss/_variables.scss
@@ -28,8 +28,8 @@ $font-size-index:         0.7rem;
 
 $small-font-size: 85% !default;
 
-$font-family-base: 'Source Sans Pro', sans-serif;
-$font-family-sans-serif: 'Source Sans Pro', sans-serif;
+$font-family-base: 'Montserrat', sans-serif;
+$font-family-sans-serif: 'Montserrat', sans-serif;
 
 // Color system
 //
